aks-deployment-mcaps/network-policy/demo-apps/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-demo
  labels:
    purpose: network-policy-demo
